--- a/public/css/application.css
+++ b/public/css/application.css
@@ -13,7 +13,7 @@ body {
   line-height: 30px;
   border: 1px solid #ddd;
   margin: 0;
-  padding: 0 5px;
+  padding: 0 8px;
 }
 
 .repo-details dt {
@@ -25,4 +25,12 @@ body {
 .repo-details dd {
   border-radius: 0 3px 3px 0;
   margin: 0 5px 0 0;
+}
+
+.bottom {
+  margin: 80px auto 15px;
+  border-top: 1px solid #ddd;
+  padding-top: 15px;
+  text-align: center;
+  color: #999;
 }
