--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,5 +22,10 @@
     <main class="container">
       <%= yield %>
     </main>
+    <footer class="container bottom">
+      A project of contrition by <a href="https://github.com/mbleigh">Michael Bleigh</a>.
+      &copy; <%= Date.today.year %>, MIT Licensed.
+      <a href="https://github.com/mbleigh/commitbit">Source available on GitHub</a>.
+    </footer>
   </body>
 </html>
